<resources>
    <string name="Hint_EMail">Email address</string>
    <string name="Hint_Password">Password</string>
    <string name="app_name">Purplemoon</string>
    <string name="PurplemoonAccountNeeded">To use this application, you need a free user account from Purplestar or Purplemoon. A few features are restricted to Poweruser subscribers by Purplemoon/Purplestar.\n\nNote that all rules, terms and conditions of Purplestar/Purplemoon still apply.</string>
    <string name="UsePurplemoon_StarCredentialsToLogin">Use your Purplemoon / -star credentials to login</string>
    <string name="login">Login</string>
    <string name="loginfailed">Login failed!</string>
    <string name="Unknown">Unknown</string>
    <string name="NewMessages">New messages</string>
    <string name="Message">Message</string>
    <string name="composeMessage">Compose Message</string>
    <string name="ProfileVisits">Profile Visits</string>
    <string name="send">Send</string>
    <string name="Postits">Post-Its</string>
    <string name="by">by</string>
    <string name="to_person">to</string>
    <string name="GenderMale">Male</string>
    <string name="GenderFemale">Female</string>
    <string name="SexualityGay">Gay</string>
    <string name="SexualityLesbian">Lesbian</string>
    <string name="SexualityHetero">Heterosexual</string>
    <string name="SexualityBisexual">Bisexual</string>
    <string name="PhotoVote0_NeutralNegative">Neutral / Negative</string>
    <string name="PhotoVote1_Cute">Cute / Attractive</string>
    <string name="PhotoVote3_Stunning">Stunning</string>
    <string name="PhotoVote2_VeryCute">Very Cute / Attractive</string>
    <string name="PhotoVotes">Photo Votes</string>
    <string name="Username">User name</string>
    <string name="Online">Online</string>
    <string name="Away">Away</string>
    <string name="Busy">Busy</string>
    <string name="Invisible">Invisible</string>
    <string name="OnlineStatus">Online Status</string>
    <string name="ErrorOccurred_NoNetwork">An error occurred: No internet connection found. Please try again later.</string>
    <string name="AnErrorOccurred">An error occurred</string>
    <string name="Given">Given</string>
    <string name="Vote_Action">Vote</string>
    <string name="Reload">Reload</string>
    <string name="Offline">Offline</string>
    <string name="Favorites_Online_">Favorites (online)</string>
    <string name="ProfileTmpOfflineByUser_Short">Deactivated temporarily by user</string>
    <string name="ProfileDeleted_Short">Profile deleted</string>
    <string name="ProfileTmpOfflineByAdmin_Short">Deactivated temporarily by administrator</string>
    <string name="ProfileTmpOfflineByTimeout_Short">Deactivated temporarily (timeout)</string>
    <string name="ProfileOfBlockedUser_Short">Blocked user profile</string>
    <string name="ProfileOfBlockingUser_Short">Profile of user that blocked you</string>
    <string name="SendFailNoText">Sending failed as the message does not contain any text.</string>
    <string name="CredentialsClear">Remove account and data</string>
    <string name="CredentialsClearExplanation">This will delete the access token to your account, remove user data and log you out.</string>
    <string name="EmailOrPasswordMayNotBeEmpty">Your email or password may not be empty.</string>
    <string name="PleaseWait">Please wait.</string>
    <string name="QuestionMark">"?"</string>
    <string name="_0">0</string>
    <string name="Refresh">Refresh</string>
    <string name="Settings">Settings</string>
    <string name="Sent">Sent</string>
    <string name="Received">Received</string>
    <string name="ReceivedMessage">Received</string>
    <string name="All">All</string>
    <string name="Messages">Messages</string>
    <string name="_Empty_"></string>
    <string name="CheckForNewEvents">Notify me of new events</string>
    <string name="CheckEvery_">Check every …</string>
    <string name="CredentialsInvalid_Toast">Your credentials in Purplesky have become invalid. Please update them. Thank you.</string>
    <string name="ShowProfile">Show profile</string>
    <string name="PreferenceUpdateInterval_Summary">How often Purplesky checks for new messages.</string>
    <string name="Stats">Stats</string>
    <string name="Upload">Upload</string>
    <string name="Description">Description</string>
    <string name="Folder">Folder</string>
    <string name="UnknownFolder">Unknown folder</string>
    <string name="Pictures">Pictures</string>
    <string name="Loading_">Loading…</string>
    <string name="imageDescription_UserPicture">User picture</string>
    <string name="imageDescription_iconFolder">Folder icon</string>
    <string name="New">New</string>
    <string name="ChooseFromPostits">Choose from post-its</string>
    <string name="CustomPostit">Custom Post-it</string>
    <string name="EnterCustomPostit">Enter custom post-it text</string>
    <string name="Post">Post</string>
    <string name="ErrorNoTextCustomPostit">Must enter text for custom post-it!</string>
    <string name="UnknownErrorOccured">An unknown error occurred!</string>
    <string name="PostitCreated">Post-it created!</string>
    <string name="ChoosePredefinedOnlineStatus">Choose online status</string>
    <string name="CustomStatus">Custom status</string>
    <string name="LastVisits_">Last visits:</string>
    <string name="Visitors">Visitors</string>
    <string name="MyVisits">My visits</string>
    <string name="Distance">Distance</string>
    <string name="Created">Created</string>
    <string name="LastOnline">Last online</string>
    <string name="LastUpdated">Last updated</string>
    <string name="ShowOnlyOnline">Show only online users</string>
    <string name="ShowOnlyCompatiblePartners">Show only users for relationship</string>
    <string name="Country">Country</string>
    <string name="Select_DontCare">Any</string>
    <string name="ConfirmDiscardMessage">Do you wish to discard your message?</string>
    <string name="Discard_">Discard?</string>
    <string name="Search">Search</string>
    <string name="MinMaxAgeError">The minimum age must be smaller or equal to the maximum age.</string>
    <string name="ErrorCouldNotFindUser">Oops - could not find user!</string>
    <string name="WaitSendMessage">Sending message - please wait…</string>
    <string name="MustEnterTextMessage">You need to enter text for the message (whitespace does not suffice).</string>
    <string name="LocationTimeout">Could not find the location in time. Try again later.</string>
    <string name="NoLocationDevices">Your device does not support positioning or it is disabled.</string>
    <string name="ObtainingLocation">Waiting for your location…</string>
    <string name="VerifiedUser">Verified User</string>
    <string name="UnverifiedUser">Unverified User</string>
    <string name="CreatePostit">Create Post-it</string>
    <string name="PleaseChoose">Choose…</string>
    <string name="PasswordProtected">Password protected</string>
    <string name="FolderRequiresPassword">Access to this folder is protected by a password. Use the web-interface of Purplemoon/Purplestar to enter the password.</string>
    <string name="XMessagesByYContacts">%1$d new messages from %2$d contacts.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="ErrorWrongCredentials">Wrong credentials!</string>
    <string name="alert_dialog_discard">Discard</string>
    <string name="preferences_header_eventNotifications">Event notifications</string>
    <string name="preferences_header_account">Purplemoon / Purplestar Account</string>
    <string name="ErrorEnterAtLeastXCharacters">Please enter at least %1$d characters!</string>
    <string name="FriendOfYou">Friend of you</string>
    <string name="YouKnowThisUser">You know this user</string>
    <string name="and">and</string>
    <string name="description_needsLocation">Uses your phone\'s location services.</string>
    <string name="IAmLookingFor">I am looking for a</string>
    <string name="search_composite_forA">for a</string>
    <string name="search_composite_withinAgesOf">within the ages of</string>
    <string name="ErrorApologizeForTheInconvenience">We apologize for the inconvenience.</string>
    <string name="ErrorNetworkGeneric">Could not retrieve or send data. Check your internet connection and try again.</string>
    <string name="ErrorNetworkGenericClickRetry">Could not retrieve or send data. Check your internet connection and tap to try again.</string>
    <plurals name="NewMessage_Quantity">
        <item quantity="one">1 new message</item>
        <item quantity="many">%1$d new messages</item>
    </plurals>
    <string name="Profile">Profile</string>
    <string name="NoPendingRecentlyCompletedUploads">No pending or recently completed uploads.</string>
    <string name="UploadStatusComplete">Complete</string>
    <string name="UploadStatusError">Error</string>
    <string name="UploadStatusUploading">Uploading</string>
    <string name="UploadStatusWaiting">Waiting</string>
    <string name="ErrorNoNetworkGenericShort">No internet connection.</string>
    <string name="CreatingPostit">Creating post-it</string>
    <string name="Error_NoPowerUserGeneric">Purplemoon/Purplestar needs you to be a poweruser to perform this action. You can subscribe to be a poweruser on the Purplemoon/Purplestar website.</string>
    <string name="Error_NoPowerUserTitle">You are not a poweruser.</string>
    <string name="ErrorActionYouAreBlocking">This action cannot be performed because you blocked the other user. You unblock the user on the Purplemoon/Purplestar website.</string>
    <string name="ErrorActionBeingBlocked">This action cannot be performed because are being blocked by the other user.</string>
    <string name="ErrorGeneric">An unknown error occurred. We apologize for the inconvenience.</string>
    <string name="ErrorGenericNoText">An error occurred: You have entered no text in the relevant field(s).</string>
    <string name="SearchUser_ShortHome">User search</string>
    <string name="preference_poweruserStatus">Poweruser status</string>
    <string name="CreateAccountUnderlined"><u>No account yet? Create one here</u></string>
    <string name="SelectLocation">Select location</string>
    <string name="UseMyCurrentLocation">Use my current location</string>
    <string name="PreferenceNotifyPostits">New post-its</string>
    <string name="PreferenceNotifyNewMessages">New messages</string>
    <string name="PreferenceNotifyNewVisits">New vists</string>
    <string name="PreferencesNotifyNewVotes">New photo votes</string>
    <string name="PreferencesNotificationChooseEvents">Notification events</string>
    <string name="PreferencesNotificationChooseEvents_Expl">Events which trigger a notification</string>
    <string name="PreferenceNotificationSound">Notification tone</string>
    <string name="PreferenceVibration">Vibrate</string>
    <string name="Radar">Radar</string>
    <string name="ReportUser_Instruction">
        Fill out this form to report the user to the staff of Purplemoon.</string>
    <string name="Report_Hint_Explanation">Please provide explanation</string>
    <string name="_Action_Report">Report</string>
    <string name="PreferenceUpdateProfileLocation">Update profile location</string>
    <string name="PreferenceSummaryUpdateProfileLocation">When opening the radar, your device location be sent to Purplemoon to update your profile location.</string>
    <string name="ReportComplete">Your report has been submitted. Use the back key to return to the previous screen.</string>
    <string name="PreferenceAboutApp">About this app</string>
    <string name="PreferenceAboutApp_Summary">Licences of included software</string>
</resources>