<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/Messages"
            android:icon="@drawable/content_email"
            android:id="@+id/drawer_menu_message"
            />
        <item
            android:title="@string/Radar"
            android:icon="@drawable/radar"
            android:id="@+id/drawer_menu_radar"
            />
        <item
            android:title="@string/Postits"
            android:icon="@drawable/action_postit"
            android:id="@+id/drawer_menu_postits"
            />
        <item
            android:title="@string/ProfileVisits"
            android:icon="@drawable/visits_1step"
            android:id="@+id/drawer_menu_profilevisits"
            />
        <item
            android:title="@string/Favorites_Online_"
            android:icon="@drawable/rating_important"
            android:id="@+id/drawer_menu_favorites"
            />
        <item
            android:title="@string/SearchUser_ShortHome"
            android:icon="@drawable/action_search"
            android:id="@+id/drawer_menu_usersearch"
            />
        <item
            android:title="@string/PhotoVotes"
            android:icon="@drawable/picture_rate"
            android:id="@+id/drawer_menu_photovote"
            />
        <item
            android:title="@string/Upload"
            android:icon="@drawable/content_new_picture"
            android:id="@+id/drawer_menu_upload"
            />
        <item
            android:title="@string/Settings"
            android:icon="@drawable/action_settings"
            android:id="@+id/drawer_menu_settings"
            />
    </group>
</menu>