<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/conversation_menu_showprofile"
        android:title="@string/ShowProfile"
        android:titleCondensed="@string/ShowProfile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/action_person">
    </item>
    <item
        android:id="@+id/conversation_menu_refresh"
        android:icon="@drawable/action_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/Refresh"
        android:titleCondensed="@string/Refresh">
    </item>
    <item android:id="@+id/conversation_menu_report"
           android:title="@string/_Action_Report"
           android:titleCondensed="@string/_Action_Report"
           android:icon="@drawable/action_flag"
          app:showAsAction="ifRoom"
    />

</menu>