<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ReportUser_Instruction"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="8dp"
        android:id="@+id/textView"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_reportuser_reasonSpinner"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/fragment_reportuser_explanation"
        android:layout_gravity="center_horizontal"
        android:minLines="3"
        android:layout_marginBottom="8dp"
        android:hint="@string/Report_Hint_Explanation"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_Action_Report"
        android:id="@+id/fragment_reportuser_sendBtn"
        android:layout_gravity="center_horizontal"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_reportuser_progress"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:indeterminate="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone"
        android:text="@string/ReportComplete"
        android:id="@+id/fragment_reportuser_resultText"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>