<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/create_postit_upperBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="8dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingTop="8dp"
            android:text="@string/ChooseFromPostits"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/create_postit_postitSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/create_postit_customEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/create_postit_postitSpinner"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/EnterCustomPostit"
            android:inputType="textMultiLine"
            android:maxLength="50"
            android:minLines="2"
            android:visibility="invisible" >
        </EditText>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_postit_upperBox"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/create_postit_cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_shape"
            android:text="@string/alert_dialog_cancel" />

        <Button
            android:id="@+id/create_postit_sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_button_shape"
            android:text="@string/Post"
            />
    </LinearLayout>

</RelativeLayout>