<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <RelativeLayout
        android:id="@+id/location_choose_dialogfragment_useloc_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/location_choose_dialogfragment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:enabled="false"
            android:text="@string/UseMyCurrentLocation" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/location_choose_dialogfragment_button"
            android:contentDescription="@string/description_needsLocation"
            android:src="@android:drawable/ic_menu_mylocation" />

    </RelativeLayout>

    <TextView
        android:id="@+id/location_choose_dialogfragment_locationStatLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ObtainingLocation" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/holo_blue_light" />

    <RelativeLayout
        android:id="@+id/location_choose_dialogfragment_textcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/location_choose_dialogfragment_editTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:ems="10"
            android:hint="@string/SelectLocation" >

            <requestFocus />
        </EditText>

        <ProgressBar
            android:id="@+id/location_choose_dialogfragment_editProgress"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="invisible"
             />

    </RelativeLayout>

    <ListView
        android:id="@+id/location_choose_dialogfragment_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
